--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -305,6 +305,7 @@
     <!-- 通用工具组件 -->
     <script src="{{ url_for('static', filename='js/common/console-utils.js') }}"></script>
     <script src="{{ url_for('static', filename='js/common/alert-utils.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/common/time-utils.js') }}"></script>
 
     <!-- 权限查看组件 -->
     <script src="{{ url_for('static', filename='js/common/permission-viewer.js') }}"></script>
